remove logo from popup, fix z-index

--- a/shared/pages/Wallet/components/NotityBlock/NotifyBlock.scss
+++ b/shared/pages/Wallet/components/NotityBlock/NotifyBlock.scss
@@ -43,7 +43,7 @@
 .notifyBlockSaveKeys {
   background: linear-gradient(265.47deg, #6144e5 0%, #7359ea 100%);
   > div {
-    color: #6144e5;
+    //color: #6144e5;
   }
 }
 
@@ -87,7 +87,6 @@
     margin-bottom: 0;
   }
   p:last-child {
-    opacity: 0.8;
     font-size: 15px;
   }
 }
